--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "framer-motion": "^6.2.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
